# CLearningLabs

./: .gitignore  CMakeLists.txt  README.md  main.c
app/: app_config.h  main.c
core/SimpleGames/: GamesAi.c  GamesAi.h  TicTacToe.c  TicTacToe.h  ttt_ai.c  ttt_ai.h  ttt_board.c  ttt_board.h  ttt_display.c  ttt_display.h  ttt_input.c  ttt_input.h
core/StudentManager/: SMS_controller.h  SMS_service.h  SMS_ui.c  StudentManager.c  StudentManager.h
core/student_manager/include/: SMS_data.h  SMS_ui.h
core/student_manager/src/: SMS_controller.c  SMS_data.c  SMS_service.c
utils/: Tprint.c
utils/include/: Tprint.h
utils/src/: Tprint.c
